--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/icons/otplogo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Svelte Otp</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family==Lato:ital,wght@0,400;0,700;0,900;1,400&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
